--- a/static/css/body-tools.css
+++ b/static/css/body-tools.css
@@ -7,7 +7,7 @@
     box-shadow: var(--box-shadow);
     background: var(--color-pre-bg);
     border-radius: var(--border-radius);
-    border: .1em solid var(--color-border);
+    border: 1px solid var(--color-border);
 }
 
 .tools-content > .header {
